--- a/css/styles.css
+++ b/css/styles.css
@@ -504,3 +504,88 @@ p.icons-text {
     text-align: center;
 }
 
+
+/* Media Query for Responsive Design */
+@media only screen and (max-width: 768px) {
+    /* Add CSS rules here for screens that are 768px or less */
+    #nav {
+      height: auto;
+      flex-direction: column;
+    }
+  
+    .nav-logo {
+      margin: auto;
+      margin-bottom: 20px;
+    }
+  
+    .nav-link {
+      margin: 10px 0;
+    }
+  
+    .hero-copy {
+      margin-top: 8rem;
+    }
+  
+    .main-copy {
+      font-size: 3.2rem;
+      width: 100%;
+    }
+  
+    .sub-copy {
+      font-size: 16px;
+    }
+  
+    .hero-btn {
+      flex-direction: column;
+    }
+  
+    .hero-btn-1, .hero-btn-2 {
+      width: 100%;
+      margin: 10px 0;
+    }
+  
+    #card {
+      flex-direction: column;
+      align-items: center;
+      top: auto;
+      margin-top: 60px;
+    }
+  
+    .hero-card {
+      width: 80%;
+    }
+  
+    .client-style {
+      display: none;
+    }
+  
+    .client-photo {
+      width: 300px;
+      height: 460px;
+    }
+  
+    .client-text {
+      width: 100%;
+      margin-top: 20px;
+    }
+  
+    .client-title {
+      font-size: 40px;
+      width: 100%;
+      margin: 24px 0 20px;
+    }
+  
+    .client-sub-title {
+      font-size: 16px;
+    }
+  
+    .client-caption {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+  
+    .client-btn {
+      width: 100%;
+      margin-top: 20px;
+    }
+  }
